# stretch_main

./: .gitignore  CLAUDE.md  README.md  run.sh
.github/workflows/: ci.yml
behaviortree_ros2/include/behaviortree_ros2/: bt_action_node.hpp
btcpp_ros2_interfaces/: CMakeLists.txt  package.xml
btcpp_ros2_interfaces/action/: FirmwareMission.action  Navigation.action
btcpp_ros2_interfaces/msg/: Obstacles.msg
btcpp_ros2_interfaces/srv/: StartUpSrv.srv
docker/: Dockerfile.ci  docker-compose.yaml
engine/: CMakeLists.txt  package.xml
engine/bt/: main_tree.xml
engine/include/bt_engine/: bt_engine.hpp
engine/src/: bt_engine.cpp
nav/: CMakeLists.txt  package.xml
nav/include/bt_nav/: navigate_to_pose_action.hpp
nav/src/: navigate_to_pose_action.cpp
