<?xml version="1.0"?>
<package format="3">
  <name>bt_engine</name>
  <version>0.1.0</version>
  <description>Minimal BehaviorTree.CPP engine that ticks on /start</description>

  <maintainer email="justinshih@gapp.nthu.edu.tw">justinshih</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>bt_nav</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
