<?xml version="1.0"?>
<package format="3">
  <name>bt_nav</name>
  <version>0.1.0</version>
  <description>BehaviorTree.CPP action node for nav2 navigate_to_pose</description>

  <maintainer email="justinshih@gapp.nthu.edu.tw">justinshih</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp</depend>
  <depend>behaviortree_ros2</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
